--- a/tasks/upgrade.yml
+++ b/tasks/upgrade.yml
@@ -2,9 +2,10 @@
 - name: upgrade | run the upgrade script
   ansible.builtin.command: "{{ netbox_current_path }}/upgrade.sh"
   environment:
-    PYTHON: python3.9
+    PYTHON: python3.8
   become: yes
   become_method: sudo
+  become_user: "{{ netbox_user }}"
   notify: restart_netbox
   when: netbox_current_symlink.changed or netbox_auth_ldap_requirements.changed
   tags:
