added CI fvalidation for Amazon Linux 2 AMI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,6 +61,7 @@ jobs:
     strategy:
       matrix:
         distro:
+          - amazonlinux2-ansible
           - centos8
           - ubuntu2004
         python_version:
