--- a/meta/main.yml
+++ b/meta/main.yml
@@ -9,6 +9,9 @@ galaxy_info:
   license: "license (BSD, MIT)"
   min_ansible_version: 2.8
   platforms:
+    - name: Amazon Linux 2
+      versions:
+        - any
     - name: EL
       versions:
         - 8
