--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,7 +61,7 @@ jobs:
     strategy:
       matrix:
         distro:
-          - amazonlinux2-ansible
+          - amazonlinux2
           - centos8
           - ubuntu2004
         python_version:
