--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -1,4 +1,15 @@
 ---
+# version 3.0.10 started throwing a warning during superuser creation
+# uses the package 'redis-py'
+- name: configure | add the HiredisParser local_requirements.txt
+  ansible.builtin.lineinfile:
+    path: "{{ netbox_current_path }}/local_requirements.txt"
+    line: "hiredis"
+    regexp: "^hiredis"
+    owner: "{{ netbox_user }}"
+    mode: '0644'
+    create: yes
+
 - name: configure | generate django secret key
   ansible.builtin.command: "python3 {{ netbox_current_path }}/netbox/generate_secret_key.py"
   register: netbox_secret_key_generated
