refactored molecule and added Netbox 3.0.10 to actions

--- a/molecule/v3.0.10/molecule.yml
+++ b/molecule/v3.0.10/molecule.yml
@@ -1,6 +1,8 @@
 ---
 dependency:
   name: galaxy
+  options:
+    role-file: molecule/default/requirements.yml
 
 driver:
   name: docker
@@ -17,3 +19,7 @@ platforms:
 
 provisioner:
   name: ansible
+  playbooks:
+    prepare: ../default/prepare.yml
+    converge: converge.yml
+    verify: ../default/verify.yml
