moved AL2 steps to molecule

--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -19,6 +19,14 @@
         update_cache: yes
       when: ansible_os_family == 'Debian'
 
+    - name: Install Amazon Linux 2 dependencies
+      ansible.builtin.cmd: "amazon-linux-extras install {{ item }} "
+      become: yes
+      with_items:
+        - python3
+        - postgresql10
+      when: ansible_distribution == 'Amazon'
+
   tasks:
     # RHEL8+ container images only have C.UTF-8 installed
     - name: Set database locale when using CentOS8/RHEL8+
