removed python 3.7 (being depricated) and fixed ansible step mistake

--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -20,7 +20,7 @@
       when: ansible_os_family == 'Debian'
 
     - name: Install Amazon Linux 2 dependencies
-      ansible.builtin.cmd: "amazon-linux-extras install {{ item }} "
+      ansible.builtin.command: "amazon-linux-extras install {{ item }} "
       become: yes
       with_items:
         - python3
