--- a/.github/workflows/netbox.yml
+++ b/.github/workflows/netbox.yml
@@ -11,7 +11,7 @@ defaults:
     working-directory: 'jvoss.netbox'
 
 jobs:
-  molecule:
+  netbox:
     name: Netbox
     runs-on: ubuntu-latest
     strategy:
