--- a/tasks/install.redhat.yml
+++ b/tasks/install.redhat.yml
@@ -1,10 +1,6 @@
 ---
-- name: install.redhat | enable required Amazon Linux 2 extras
-  ansible.builtin.command: "amazon-linux-extras enable {{ item }} "
-  become: yes
-  with_items:
-    - python3.8
-    - postgresql12
+- name: install.redhat | include Amazon Linux 2 tasks
+  include_tasks: install.amazon.yml
   when: ansible_distribution == 'Amazon'
 
 - name: install.redhat | install required system packages
@@ -22,7 +18,6 @@
     - libpq-devel
     - openssl-devel
     - redhat-rpm-config
-    - tar # required install on Amazon Linux to untar release
 
 - name: install.redhat | install Git
   ansible.builtin.yum:
