first try at amazon itempotency

--- a/tasks/install.amazon.yml
+++ b/tasks/install.amazon.yml
@@ -1,13 +1,30 @@
 ---
+# - name: install.amazon | checking for amazon extras yum repo file
+#   ansible.builtin.stat:
+#     path: /etc/yum.repos.d/amzn2-extras.repo
+#   register: amazon_extras_repo
+
+- name: install.amazon | checking if required amazon extras are enabled
+  ansible.builtin.lineinfile:
+    path: /etc/yum.repos.d/amzn2-extras.repo
+    line: "{{ item }}"
+    regexp: "^\[amzn2extra-{{item}}\]"
+    state: present
+  check_mode: yes
+  # when: amazon_extras_repo.stat.exists
+  register: amzn2extras
+  with_items:
+    - python3.8
+    - postgresql12
+
 - name: install.amazon | enable required extras
   ansible.builtin.command: "amazon-linux-extras enable {{ item }} "
-  args:
-    # TODO find more suitable itempotency
-    creates: /etc/yum.repos.d/amzn2-extras.repo
   become: yes
   with_items:
     - python3.8
     - postgresql12
+  # when: not amazon_extras_repo.stat.exists or #file lines not set
+  when: amzn2extra is failed
 
 - name: install.amazon | install tar
   ansible.builtin.yum:
