--- a/tasks/install.amazon.yml
+++ b/tasks/install.amazon.yml
@@ -8,7 +8,7 @@
   ansible.builtin.lineinfile:
     path: /etc/yum.repos.d/amzn2-extras.repo
     line: "{{ item }}"
-    regexp: "^\[amzn2extra-{{item}}\]"
+    regexp: "^\\[amzn2extra-{{ item }}\\]"
     state: present
   check_mode: yes
   # when: amazon_extras_repo.stat.exists
