--- a/.github/workflows/netbox.yml
+++ b/.github/workflows/netbox.yml
@@ -17,6 +17,7 @@ jobs:
     strategy:
       matrix:
         distro:
+          - amazonlinux2
           - centos8
           - ubuntu2004
         netbox:
