add support for Amazon Linux 2 (#5)
* added Amazon Linux 2 support and testing

* removed unnecessary Ansible GitHub python version testing

--- a/.github/workflows/netbox.yml
+++ b/.github/workflows/netbox.yml
@@ -11,12 +11,13 @@ defaults:
     working-directory: 'jvoss.netbox'
 
 jobs:
-  molecule:
+  netbox:
     name: Netbox
     runs-on: ubuntu-latest
     strategy:
       matrix:
         distro:
+          - amazonlinux2
           - centos8
           - ubuntu2004
         netbox:
