--- a/tasks/install.redhat.yml
+++ b/tasks/install.redhat.yml
@@ -1,4 +1,8 @@
 ---
+- name: install.redhat | include Amazon Linux 2 tasks
+  include_tasks: install.amazon.yml
+  when: ansible_distribution == 'Amazon'
+
 - name: install.redhat | install required system packages
   ansible.builtin.yum:
     name: "{{ item }}"
