--- a/tasks/download-release.yml
+++ b/tasks/download-release.yml
@@ -4,12 +4,16 @@
     url: "https://api.github.com/repos/netbox-community/netbox/releases/latest"
     return_content: true
   register: latest_release
-  when: netbox_version_tag is undefined
+  when: netbox_version_tag is undefined or netbox_version_tag|length == 0
 
 - name: download-release | Set latest Netbox version fact
   ansible.builtin.set_fact:
     netbox_version_tag: "{{ latest_release.json.tag_name }}"
-  when: netbox_version_tag is undefined
+  when: netbox_version_tag is undefined or netbox_version_tag|length == 0
+
+- name: download-release | Selected version information
+  ansible.builtin.debug:
+    var: netbox_version_tag
 
 - name: download-release | Set Netbox version path fact
   ansible.builtin.set_fact:
