--- a/.github/workflows/netbox.yml
+++ b/.github/workflows/netbox.yml
@@ -12,7 +12,7 @@ defaults:
 
 jobs:
   netbox:
-    name: Netbox
+    name: ${{ matrix.netbox }} (${{ matrix.distro }})
     runs-on: ubuntu-latest
     strategy:
       matrix:
