add Rocky Linux to test matrix

--- a/.github/workflows/netbox.yml
+++ b/.github/workflows/netbox.yml
@@ -19,6 +19,7 @@ jobs:
         distro:
           - amazonlinux2
           - centos8
+          - rockylinux8
           - ubuntu2004
         netbox:
           - v3.0.9
