--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,6 +63,7 @@ jobs:
         distro:
           - amazonlinux2
           - centos8
+          - rockylinux8
           - ubuntu2004
 
     services:
