--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -31,7 +31,12 @@
   register: netbox_auth_ldap_requirements
   when: netbox_auth_ldap is defined
 
-- name: configure | write configuration.py
+- name: configure | set netbox_override_dynamic_config True for Netbox < 3.1.0
+  ansible.builtin.set_fact:
+    netbox_override_dynamic_config: True
+  when: netbox_version_tag < 'v3.1.0'
+
+- name: configure | write Netbox configuration.py
   ansible.builtin.template:
     src: configuration.py.j2
     dest: "{{ netbox_current_path }}/netbox/netbox/configuration.py"
