--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -79,9 +79,9 @@ netbox_redis_tls_insecure: False
 
 ### Netbox Optional settings ###
 
-# Override Netbox >= v3.1 Dynamic Configuration Settings to override the UI
-# by writing configuration parameters that have been moved to Netbox's admin
-# interface: https://netbox.readthedocs.io/en/stable/configuration/dynamic-settings/
+# Override Netbox >= v3.1 Dynamic Configuration Settings by writing configuration
+# parameters that have been moved to Netbox's admin interface: 
+# https://netbox.readthedocs.io/en/stable/configuration/dynamic-settings/
 netbox_override_dynamic_config: False
 
 # Specify one or more name and email address tuples representing NetBox
