--- a/.github/workflows/netbox.yml
+++ b/.github/workflows/netbox.yml
@@ -22,6 +22,7 @@ jobs:
           - rockylinux8
           - ubuntu2004
         netbox:
+          - v3.2-beta1
           - v3.1.8
           - v3.1.7
           - v3.0.12
