--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -139,7 +139,7 @@ netbox_changelog_retention: 90
 # administrators can now define default preferences for all users with the
 # DEFAULT_USER_PREFERENCES configuration parameter. For example, this can be
 # used to define the columns which appear by default in a table:
-# netbox_default_user_preferences:
+#netbox_default_user_preferences:
 #   tables:
 #     IPAddressTable:
 #       columns:
@@ -157,12 +157,11 @@ netbox_changelog_retention: 90
 # These choices are populated automatically when NetBox initializes.
 # For example, the following configuration will add three custom choices for
 # the site status field, each with a designated color:
-netbox_field_choices: {
+#netbox_field_choices:
 #   dcim.Site.status:
 #     - ['foo', 'Foo', 'red'],
 #     - ['bar', 'Bar', 'green'],
 #     - ['baz', 'Baz', 'blue']
-}
 
 # API Cross-Origin Resource Sharing (CORS) settings. If CORS_ORIGIN_ALLOW_ALL is set to
 # True, all origins will be allowed. Otherwise, define a list of allowed origins using
