--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -10,7 +10,7 @@
     mode: '0644'
     create: yes
 
-- name: configure | add the NAPALM to local_requirements.txt
+- name: configure | add NAPALM to local_requirements.txt
   ansible.builtin.lineinfile:
     path: "{{ netbox_current_path }}/local_requirements.txt"
     line: "napalm"
