--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -278,15 +278,22 @@ netbox_metrics_enabled: False
 # Credentials that Netbox will uses to authenticate to devices when connecting
 # via NAPALM.
 # Note: Moved to Dynamic Configuration (see netbox_override_dynamic_config)
-netbox_napalm:
-  username: ''
-  password: ''
-  timeout: 30 # NAPALM timeout (in seconds). (Default: 30)
+# Define an empty `netbox_napalm` dict in your variables to install the NAPALM
+# libraries (when using dynamic configuration)
+#
+# netbox_napalm:
+#
+# pre Netbox 3.1:
+#
+# netbox_napalm:
+#   username: ''
+#   password: ''
+#   timeout: 30 # NAPALM timeout (in seconds). (Default: 30)
 
-  # NAPALM optional arguments
-  # (see https://napalm.readthedocs.io/en/latest/support/#optional-arguments).
-  # Arguments must be provided as a dictionary.
-  args: {}
+#   # NAPALM optional arguments
+#   # (see https://napalm.readthedocs.io/en/latest/support/#optional-arguments).
+#   # Arguments must be provided as a dictionary.
+#   args: {}
 
 # Determine how many objects to display per page within a list. (Default: 50)
 # Note: Moved to Dynamic Configuration (see netbox_override_dynamic_config)
