--- a/tasks/upgrade.yml
+++ b/tasks/upgrade.yml
@@ -6,7 +6,8 @@
   become: yes
   become_method: sudo
   become_user: "{{ netbox_user }}"
+  listen: upgrade_netbox
   notify: restart_netbox
-  when: netbox_current_symlink.changed or netbox_auth_ldap_requirements.changed
+  when: netbox_current_symlink.changed or netbox_auth_ldap_requirements.changed or netbox_napalm_step.changed
   tags:
     - skip_ansible_lint # task vs handler to trigger at specific point in run
