--- a/tasks/upgrade.yml
+++ b/tasks/upgrade.yml
@@ -7,6 +7,6 @@
   become_method: sudo
   become_user: "{{ netbox_user }}"
   notify: restart_netbox
-  when: netbox_current_symlink.changed or netbox_auth_ldap_requirements.changed
+  when: netbox_current_symlink.changed or netbox_auth_ldap_requirements.changed or netbox_napalm_step.changed
   tags:
     - skip_ansible_lint # task vs handler to trigger at specific point in run
