--- a/vars/Debian-10.yml
+++ b/vars/Debian-10.yml
@@ -1,6 +1,7 @@
 ---
+__python_version: "3.8"
 __python_packages:
-    - python3.8
-    - python3-pip
-    - python3.8-venv
-    - python3.8-dev
+    - "python{{ python_version }}"
+    - "python3-pip"
+    - "python{{ python_version }}-venv"
+    - "python{{ python_version }}-dev"
