--- a/vars/Amazon-2.yml
+++ b/vars/Amazon-2.yml
@@ -1,3 +1,4 @@
 ---
 __python_version: "3.8"
-__python_packages: "python{{ python_version | default(__python_version) }}"
+__python_packages:
+  - "python{{ python_version | default(__python_version) }}"
