--- a/.github/workflows/netbox.yml
+++ b/.github/workflows/netbox.yml
@@ -19,6 +19,8 @@ jobs:
         distro:
           - amazonlinux2
           - centos8
+          - debian10
+          - debian11
           - rockylinux8
           - ubuntu2004
         netbox:
