update workflows and documentation for Debian support (#30)
* add Debian checks to GitHub workflows
* remove checks for NetBox sub-point releases, keep last major/minor releases
* update README for Debian support and fix syntax highlighting

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,6 +63,7 @@ jobs:
         distro:
           - amazonlinux2
           - centos8
+          - debian11
           - rockylinux8
           - ubuntu2004
 
