initial plugins commit

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -13,7 +13,11 @@
   register: config_check
   failed_when: "config_check.stdout != 'System check identified no issues (0 silenced).'"
 
-- name: handler | restart Netbox services
+- name: handlers | include plugin handlers
+  include_tasks: plugins.yml
+  listen: netbox_plugin_handlers
+
+- name: handlers | restart Netbox services
   ansible.builtin.service:
     name: "{{ item }}"
     state: restarted
