--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -14,6 +14,9 @@
 - name: Include Netbox configuration tasks
   include_tasks: configure.yml
 
+- name: Install Plugins
+  include_tasks: plugins.yml
+
 - name: Include Netbox upgrade tasks
   include_tasks: upgrade.yml
 
