Add support for NetBox plugin installation and configuration (#34)

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -13,7 +13,7 @@
   register: config_check
   failed_when: "config_check.stdout != 'System check identified no issues (0 silenced).'"
 
-- name: handler | restart Netbox services
+- name: handlers | restart Netbox services
   ansible.builtin.service:
     name: "{{ item }}"
     state: restarted
