add support for username_is_full_email

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -329,6 +329,7 @@ netbox_remote_auth:
   auto_create_user: True
   default_groups: []
   default_permissions: {}
+  # social_auth_username_is_full_email: false
 
 # This repository is used to check whether there is a new release of NetBox available.
 # Set to None to disable the version check or use the URL below to check for release
