--- a/meta/main.yml
+++ b/meta/main.yml
@@ -18,6 +18,7 @@ galaxy_info:
     - name: Ubuntu
       versions:
         - focal
+        - jammy
     - name: Debian
       versions:
         - buster
