add distro specific vars and 2204 testing to CI task

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,6 +66,7 @@ jobs:
           - debian11
           - rockylinux8
           - ubuntu2004
+          - ubuntu2204
 
     services:
       postgres:
