resolve updated linting issues

--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -8,7 +8,7 @@
       register: services_state
 
     - name: verify Netbox services are running
-      assert:
+      ansible.builtin.assert:
         that: item.state == 'running'
       with_items:
         - "{{ services_state.ansible_facts.services['netbox.service'] }}"
