--- a/meta/main.yml
+++ b/meta/main.yml
@@ -7,7 +7,7 @@ galaxy_info:
   description: Installs and configures Netbox
   company: ""
   license: "license (BSD, MIT)"
-  min_ansible_version: 2.8
+  min_ansible_version: '2.8'
   platforms:
     - name: Amazon Linux 2
       versions:
