--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -22,7 +22,7 @@
   tasks:
     # RHEL8+ container images only have C.UTF-8 installed
     - name: Set database locale when using CentOS8/RHEL8+
-      set_fact:
+      ansible.builtin.set_fact:
         db_locale: C.UTF-8
       when:
         - ansible_os_family == 'RedHat'
@@ -35,7 +35,7 @@
       when: ansible_os_family == 'RedHat'
 
     - name: Install PostgreSQL
-      include_role:
+      ansible.builtin.include_role:
         name: geerlingguy.postgresql
       vars:
         postgresql_users:
@@ -50,6 +50,6 @@
       when: lookup('env', 'CI') != 'true' # skip if via github actions
 
     - name: Install Redis
-      include_role:
+      ansible.builtin.include_role:
         name: geerlingguy.redis
       when: lookup('env', 'CI') != 'true' # skip if via github actions
