--- a/tasks/install.redhat.yml
+++ b/tasks/install.redhat.yml
@@ -1,6 +1,6 @@
 ---
 - name: install.redhat | include Amazon Linux 2 tasks
-  include_tasks: install.amazon.yml
+  ansible.builtin.include_tasks: install.amazon.yml
   when: ansible_distribution == 'Amazon'
 
 - name: install.redhat | install required system packages
