correct minor linting issues after ansible-lint upgrade

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -11,10 +11,10 @@ galaxy_info:
   platforms:
     - name: Amazon Linux 2
       versions:
-        - any
+        - all
     - name: EL
       versions:
-        - 8
+        - "8"
     - name: Ubuntu
       versions:
         - focal
