--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -5,11 +5,14 @@
 - name: configure | add tzdata fix to local_requirements.txt when NetBox <= 3.2.9
   ansible.builtin.lineinfile:
     path: "{{ netbox_current_path }}/local_requirements.txt"
-    line: "tzdata==2022.2"
-    regexp: "^tzdata"
+    line: "{{ item }}"
+    regexp: "^{{ item }}"
     owner: "{{ netbox_user }}"
     mode: '0644'
     create: yes
+  loop:
+    - tzdata==2022.1
+    - pytz==2022.1
   when: netbox_version_tag <= 'v3.2.9'
 
 # version 3.0.10 started throwing a warning during superuser creation
