--- a/.github/workflows/netbox.yml
+++ b/.github/workflows/netbox.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         distro:
-          - amazonlinux2
+          # - amazonlinux2
           - centos8
           - debian10
           - debian11
@@ -65,12 +65,12 @@ jobs:
 
     steps:
       - name: Check out the codebase.
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           path: 'jvoss.netbox'
 
       - name: Set up Python 3.9
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v3
         with:
           python-version: '3.9'
 
