--- a/tasks/variables.yml
+++ b/tasks/variables.yml
@@ -8,7 +8,13 @@
   ansible.builtin.include_vars: "{{ ansible_os_family }}-{{ ansible_distribution_version.split('.')[0] }}.yml"
   when:
   - ansible_os_family == 'RedHat'
+  - ansible_distribution != 'Fedora'
   - ansible_distribution != 'Amazon'
+
+- name: Include OS-specific variables (Fedora).
+  ansible.builtin.include_vars: "{{ ansible_distribution }}-{{ ansible_distribution_version.split('.')[0] }}.yml"
+  when:
+  - ansible_distribution == 'Fedora'
 
 - name: Include OS-specific variables (Amazon).
   ansible.builtin.include_vars: "{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
