--- a/meta/main.yml
+++ b/meta/main.yml
@@ -15,6 +15,9 @@ galaxy_info:
     - name: EL
       versions:
         - "8"
+    - name: Fedora
+      versions:
+        - "37"
     - name: Ubuntu
       versions:
         - focal
