--- a/tasks/install.redhat.yml
+++ b/tasks/install.redhat.yml
@@ -3,6 +3,17 @@
   ansible.builtin.include_tasks: install.amazon.yml
   when: ansible_distribution == 'Amazon'
 
+- name: install.redhat | install packages missing on Fedora
+  ansible.builtin.package:
+    name: "{{ item }}"
+    state: present
+  loop:
+    - acl
+    - cronie
+    - python3-Django
+  when:
+    - ansible_distribution == 'Fedora'
+
 - name: install.redhat | install required system packages
   ansible.builtin.yum:
     name: "{{ item }}"
