--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,6 +64,7 @@ jobs:
           # - amazonlinux2
           - centos8
           - debian11
+          - debian12
           - fedora37
           - rockylinux8
           - ubuntu2004
