--- a/.github/workflows/netbox.yml
+++ b/.github/workflows/netbox.yml
@@ -21,6 +21,7 @@ jobs:
           - centos8
           - debian10
           - debian11
+          - debian12
           - fedora37
           - rockylinux8
           - ubuntu2004
