chore: ansible-lint upgrade tasks

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -6,8 +6,8 @@
   args:
     chdir: "{{ netbox_current_path }}/netbox"
     executable: /bin/bash
-  become: yes
-  become_method: sudo
+  become: true
+  become_method: ansible.builtin.sudo
   become_user: "{{ netbox_user }}"
   listen: restart_netbox
   register: config_check
@@ -17,7 +17,7 @@
   ansible.builtin.service:
     name: "{{ item }}"
     state: restarted
-  become: yes
+  become: true
   listen: restart_netbox
   loop:
     - netbox
